03_code2/grade.txt
Grading at Sun May 27 08:02:35 UTC 2018
Checking code2.c for legal syntax
temp.c:35:1: error: expected identifier or ‘(’ before ‘}’ token
 }
 ^
The code did not have legal syntax!

Overall Grade: F
